finish import feature

--- a/templates/index_video.html
+++ b/templates/index_video.html
@@ -90,6 +90,10 @@
             <label for="file_upload">Choose the file:</label>
             <input id="file_upload" type="file" name="file" data-url="upload" multiple class="form-control">
         </div>
+        <div class="checkbox form-group">
+            <label><input type="checkbox" name="labeled" class="form-control" value="" id="video_labeled">This is a labeled sample</label>
+            <p>If true, it should be in pascal label format and organized as a zip ball</p>
+        </div>
     </form>
 
     <div id="upload">
