add front end check for video name

--- a/templates/index_video.html
+++ b/templates/index_video.html
@@ -180,7 +180,7 @@
                             var video_name = $('#video_name').val()
                             if (!video_name){
                                 permitted=false;
-                                alert('Please Enter a valid file name')
+                                alert('Please Enter a valid video name')
                             }
 
                             //check file type, only mp4, avi, zip are allowed
