--- a/templates/index_video.html
+++ b/templates/index_video.html
@@ -191,7 +191,7 @@
                             }
 
                             if (permitted) {
-                                data.context = $('<p/>').text('Uploading...').replaceAll($(this));
+                                data.context = $('<p/>').text('Uploading and Extracting...').replaceAll($(this));
                                 data.submit();
                             }
                         });
